# setup_base

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
base_setup/: apps.py
base_setup/management/commands/: setup_base.py
base_setup/management/commands/utils/: apps.py  views.py
base_setup/management/commands/utils/templates/: index.html
django_base_setup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
