[metadata]
name = django-base-setup
version = 0.4.1.0
description = A Django app to setup a basic Django app with views and templates ready to be used.
long_description = file: README.rst
url = https://pypi.org/project/django-base-setup
author = Praveen Malethia
author_email = prince.malethia.36@gmail.com
license = MIT Licence
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 4.0